--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Découvrez des restaurants d'exceptions, réservez le menu qui vous convient">
     <title>OhMyFood</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,13 +53,27 @@
             </div>
         </section>
         <section class="restaurant content--padding">
-            <h3>Restaurant</h3>
+            <h3>Restaurants</h3>
+            <a href="SubPages/palette.html">
+                <article  class="restaurant__card restaurant__card--new">
+                    <img class="restaurant__card__img" src="/img/palette.jpg" alt="La palette du goût"/>
+                    <div class="restaurant__card__info">
+                        <div>
+                            <h4>La palette du goût</h4>
+                            <p>Ménilmontant</p>
+                        </div>
+                        <i class="fa-regular fa-heart">
+                            <i class="fa-solid fa-heart "></i>
+                        </i>
+                    </div>
+                </article>
+            </a>
             <a href="SubPages/note.html">
             <article class="restaurant__card restaurant__card--new">
-                <div class="restaurant__card__img"></div>
+                <img class="restaurant__card__img" src="/img/note.jpg" alt="La note enchantée"/>
                 <div class="restaurant__card__info">
                     <div>
-                        <p>La note enchantée</p>
+                        <h4>La note enchantée</h4>
                         <p>Charonne</p>
                     </div>
                     <i class="fa-regular fa-heart">
@@ -65,11 +83,11 @@
             </article>
             </a>
             <a href="SubPages/french.html">
-                <article class="restaurant__card restaurant__card--new">
-                    <div class="restaurant__card__img"></div>
+                <article class="restaurant__card">
+                    <img class="restaurant__card__img" src="/img/french.jpg" alt="A la française"/>
                     <div class="restaurant__card__info">
                         <div>
-                            <p>A la française</p>
+                            <h4>À la française</h4>
                             <p>Cité Rouge</p>
                         </div>
                         <i class="fa-regular fa-heart">
@@ -80,10 +98,10 @@
             </a>
             <a href="SubPages/sens.html">
             <article class="restaurant__card">
-                <div class="restaurant__card__img"></div>
+                <img class="restaurant__card__img" src="/img/sens.jpg" alt="Le délice des sens"/>
                 <div class="restaurant__card__info">
                     <div>
-                        <p>Le délice des sens</p>
+                        <h4>Le délice des sens</h4>
                         <p>Folie-Méricourt</p>
                     </div>
                      <i class="fa-regular fa-heart">
@@ -92,20 +110,7 @@
                 </div>
             </article>
             </a>
-            <a href="SubPages/palette.html">
-            <article class="restaurant__card">
-                <div class="restaurant__card__img"></div>
-                <div class="restaurant__card__info">
-                    <div>
-                        <p>La palette du goût</p>
-                        <p>Ménilmontant</p>
-                    </div>
-                     <i class="fa-regular fa-heart">
-                        <i class="fa-solid fa-heart "></i>
-                    </i>
-                </div>
-            </article>
-            </a>
+
         </section>
     </main>
     <footer class="footer">
