--- a/SubPages/note.html
+++ b/SubPages/note.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ohmyfood - La note enchantée</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,173 +14,172 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header class="header">
-        <h1 id="title">ohmyfood</h1>
-        <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
-    </header>
-    <div class="presentation__img"></div>
-    <main class="detail" >
-        <div class="detail__title">
-            <h2>La note enchantée</h2>
-            <i class="fa-regular fa-heart">
-                <i class="fa-solid fa-heart "></i>
-            </i>
+<header class="header">
+    <h1 id="title">ohmyfood</h1>
+    <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+</header>
+<img  class="presentation__img" src="/img/note.jpg" alt="La note enchantée">
+<main class="detail">
+    <div class="detail__title">
+        <h2>La note enchantée</h2>
+        <i class="fa-regular fa-heart">
+            <i class="fa-solid fa-heart "></i>
+        </i>
+    </div>
+    <div class="content--padding--soft">
+        <div class="menu">
+            <h3>ENTRÉES</h3>
+            <div class="menu__card menu__card--1">
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Ravioles de foie gras</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Accompagnés de leur crème à la truffe</p>
+                        <div>25€</div>
+                    </div>
+                </div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+            </div>
+            <div class="menu__card  menu__card--2">
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Caviar osciètre</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Sur blini à la farine de blé noir</p>
+                        <div>35€</div>
+
+                    </div>
+                </div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+            </div>
+            <div class="menu__card  menu__card--3">
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Homard et espuma de comté</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Mariné aux zests d'orange</p>
+                        <div>20€</div>
+
+                    </div>
+                </div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+            </div>
+            <div class="menu__card  menu__card--4">
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Foie gras de canard cuit entier</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Confiture de figue et pain toasté</p>
+                        <div>35€</div>
+
+                    </div>
+                </div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+            </div>
         </div>
-        <section class="content--padding--soft">
-            <article class="menu">
-                <h3>ENTRÉES</h3>
-                <div class="menu__card menu__card--1">
-                        <div class="menu__card__cont">
-                            <p class="menu__card__cont__title">Ravioles de foie gras</p>
-                            <div class="menu__card__cont__infos">
-                                <p>Accompagnés de leur crème à la truffe</p>
-                                <div>25€</div>
+    </div>
+    <div class="content--padding--soft background--color">
+        <section class="menu">
+            <h3>PLATS</h3>
+            <div class="menu__card  menu__card--5">
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Noix de coquilles Saint-Jacques</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Sur lit de purée de céleri-rave</p>
+                        <div>40€</div>
 
-                        </div>
                     </div>
-                    <div class="menu__card__validate">
-                            <i class="fa-solid fa-check"></i>
-                        </div>
                 </div>
-                <div class="menu__card  menu__card--2">
-                        <div class="menu__card__cont">
-                            <p class="menu__card__cont__title">Caviar osciètre</p>
-                            <div class="menu__card__cont__infos">
-                                <p>Sur blini à la farine de blé noir</p>
-                                <div>35€</div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+            </div>
+            <div class="menu__card  menu__card--6">
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Langoustine poêlée</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Purée de patate douce</p>
+                        <div>35€</div>
+                    </div>
 
-                        </div>
-                    </div>
-                    <div class="menu__card__validate">
-                            <i class="fa-solid fa-check"></i>
-                        </div>
                 </div>
-                <div class="menu__card  menu__card--3">
-                        <div class="menu__card__cont">
-                            <p class="menu__card__cont__title">Homard et espuma de comté</p>
-                            <div class="menu__card__cont__infos">
-                                <p>Mariné aux zests d'orange</p>
-                                <div>20€</div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+            </div>
+            <div class="menu__card  menu__card--7">
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Mijoté de queue de boeuf</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Et riz sauvage aux zests de citron</p>
+                        <div>44€</div>
 
-                        </div>
                     </div>
-                    <div class="menu__card__validate">
-                            <i class="fa-solid fa-check"></i>
-                        </div>
                 </div>
-                <div class="menu__card  menu__card--4">
-                        <div class="menu__card__cont">
-                            <p class="menu__card__cont__title">Foie gras de canard cuit entier</p>
-                            <div class="menu__card__cont__infos">
-                                <p>Confiture de figue et pain toasté</p>
-                                <div>35€</div>
-
-                        </div>
-                    </div>
-                    <div class="menu__card__validate">
-                            <i class="fa-solid fa-check"></i>
-                        </div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
                 </div>
-            </article>
+            </div>
         </section>
-        <section class="content--padding--soft background--color">
-            <article class="menu">
-                <h3>PLATS</h3>
-                <div class="menu__card  menu__card--5">
-                        <div class="menu__card__cont">
-                            <p class="menu__card__cont__title">Noix de coquilles Saint-Jacques</p>
-                            <div class="menu__card__cont__infos">
-                                <p>Sur lit de purée de céleri-rave</p>
-                                <div>40€</div>
-
-                        </div>
-                    </div>
-                    <div class="menu__card__validate">
-                            <i class="fa-solid fa-check"></i>
-                        </div>
-                </div>
-                <div class="menu__card  menu__card--6">
-                    <div class="menu__card__cont">
-                        <p class="menu__card__cont__title">Langoustine poêlée</p>
-                        <div class="menu__card__cont__infos">
-                            <p>Purée de patate douce</p>
-                            <div>35€</div>
-                        </div>
+    </div>
+    <div class="content--padding--soft background--color">
+        <section class="menu">
+            <h3>DESSERTS</h3>
+            <div class="menu__card  menu__card--8">
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Macaron noisette et chocolat</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Glace au caramel brun et sel de Guérande</p>
+                        <div>18€</div>
 
                     </div>
-                    <div class="menu__card__validate">
-                            <i class="fa-solid fa-check"></i>
-                        </div>
                 </div>
-                <div class="menu__card  menu__card--7">
-                        <div class="menu__card__cont">
-                            <p class="menu__card__cont__title">Mijoté de queue de boeuf</p>
-                            <div class="menu__card__cont__infos">
-                                <p>Et riz sauvage aux zests de citron</p>
-                                <div>44€</div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+            </div>
+            <div class="menu__card menu__card--9">
+                <div class="menu__card__cont  ">
+                    <p class="menu__card__cont__title">Baba au rhum revisité</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Avec son coulis de citron</p>
+                        <div>22€</div>
 
-                        </div>
                     </div>
-                    <div class="menu__card__validate">
-                            <i class="fa-solid fa-check"></i>
-                        </div>
                 </div>
-            </article>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+            </div>
+            <div class="menu__card  menu__card--10">
+                <div class="menu__card__cont">
+                    <p class="menu__card__cont__title">Tarte au citron meringuée</p>
+                    <div class="menu__card__cont__infos">
+                        <p>Destructurée</p>
+                        <div>23€</div>
+                    </div>
+
+                </div>
+                <div class="menu__card__validate">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+            </div>
         </section>
-        <section class="content--padding--soft background--color">
-            <article class="menu">
-                <h3>DESSERTS</h3>
-                <div class="menu__card  menu__card--8">
-                        <div class="menu__card__cont">
-                            <p class="menu__card__cont__title">Macaron noisette et chocolat</p>
-                            <div class="menu__card__cont__infos">
-                                <p>Glace au caramel brun et sel de Guérande</p>
-                                <div>18€</div>
-
-                        </div>
-                    </div>
-                    <div class="menu__card__validate">
-                            <i class="fa-solid fa-check"></i>
-                        </div>
-                </div>
-                <div class="menu__card menu__card--9">
-                        <div class="menu__card__cont  ">
-                            <p class="menu__card__cont__title">Baba au rhum revisité</p>
-                            <div class="menu__card__cont__infos">
-                                <p>Avec son coulis de citron</p>
-                                <div>22€</div>
-
-                        </div>
-                    </div>
-                    <div class="menu__card__validate">
-                            <i class="fa-solid fa-check"></i>
-                        </div>
-                </div>
-                <div class="menu__card  menu__card--10">
-                    <div class="menu__card__cont">
-                        <p class="menu__card__cont__title">Tarte au citron meringuée</p>
-                        <div class="menu__card__cont__infos">
-                            <p>Destructurée</p>
-                            <div>23€</div>
-                        </div>
-
-                    </div>
-                    <div class="menu__card__validate">
-                            <i class="fa-solid fa-check"></i>
-                        </div>
-                </div>
-            </article>
-        </section>
-        <button class="btn ">Commander</button>
-    </main>
-    <footer class="footer">
-        <p class="footer__title"><a href="#title" >ohmyfood</a></p>
-        <ul class="footer__list">
-            <li class="footer__list__item"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
-            <li class="footer__list__item"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
-            <li class="footer__list__item footer__list__item--lighter">Mentions légales</li>
-            <li class="footer__list__item footer__list__item--lighter">Contact</li>
-        </ul>
-    </footer>
+    </div>
+    <button class="btn ">Commander</button>
+</main>
+<footer class="footer">
+    <p class="footer__title"><a href="#title">ohmyfood</a></p>
+    <ul class="footer__list">
+        <li class="footer__list__item"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
+        <li class="footer__list__item"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
+        <li class="footer__list__item footer__list__item--lighter">Mentions légales</li>
+        <li class="footer__list__item footer__list__item--lighter">Contact</li>
+    </ul>
+</footer>
 </body>
 </html>
