--- a/SubPages/palette.html
+++ b/SubPages/palette.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ohmyfood - La palette du goût</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +18,7 @@
     <h1 id="title">ohmyfood</h1>
     <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
 </header>
-<div class="presentation__img"></div>
+<img  class="presentation__img" src="/img/palette.jpg" alt="La palette du goût">
 <main class="detail">
     <div class="detail__title">
         <h2>La palette du goût</h2>
@@ -23,8 +26,8 @@
             <i class="fa-solid fa-heart "></i>
         </i>
     </div>
-    <section class="content--padding--soft">
-        <article class="menu">
+    <div class="content--padding--soft">
+        <section class="menu">
             <h3>ENTRÉES</h3>
             <div class="menu__card menu__card--1">
                 <div class="menu__card__cont">
@@ -63,10 +66,10 @@
                     <i class="fa-solid fa-check"></i>
                 </div>
             </div>
-        </article>
-    </section>
-    <section class="content--padding--soft background--color">
-        <article class="menu">
+        </section>
+    </div>
+    <div class="content--padding--soft background--color">
+        <section class="menu">
             <h3>PLATS</h3>
             <div class="menu__card menu__card--4">
                 <div class="menu__card__cont">
@@ -101,13 +104,13 @@
                     </div>
                 </div>
                 <div class="menu__card__validate">
-                <i class="fa-solid fa-check"></i>
+                    <i class="fa-solid fa-check"></i>
+                </div>
             </div>
-            </div>
-        </article>
-    </section>
-    <section class="content--padding--soft background--color">
-        <article class="menu">
+        </section>
+    </div>
+    <div class="content--padding--soft background--color">
+        <section class="menu">
             <h3>DESSERTS</h3>
             <div class="menu__card menu__card--7">
                 <div class="menu__card__cont">
@@ -145,8 +148,8 @@
                     <i class="fa-solid fa-check"></i>
                 </div>
             </div>
-        </article>
-    </section>
+        </section>
+    </div>
     <button class="btn ">Commander</button>
 </main>
 <footer class="footer">
